# html-theme-ref

./: .gitignore  .gitmodules  .scss-lint.yml  .stylelintignore  .stylelintrc.json  .vimrc  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO  bitbucket-pipelines.yml  configure  configure.ac  gulpfile.js  jest.config.js  jest.config.sass-true.js  jest.config.sass-true.mjs  package-lock.json  package.json  postcss.config.mjs  tsconfig.debug.json  tsconfig.doc.json  tsconfig.json  tsconfig.node.json  typedoc.json  webpack.config.debug.js  webpack.config.debug.mjs  webpack.config.demo.js  webpack.config.doc.js  webpack.config.doc.mjs  webpack.config.js  webpack.config.mjs
.github/: FUNDING.yml
demo/: _base.njk  _macro.njk  demo1.njk  index.njk
demo/partial/base/: typography.htm
demo/partial/extra/: fontawesome.htm
demo/partial/layout/: site-footer.htm  site-sidebar.htm
docs/partial/layout/: site-header.htm
docs/script/: README.md
docs/style/_templates/: frame.html  index.html
docs/style/abstracts/variables/: colors.htm  font.htm
docs/style/base/: grouping-content.htm  sections.htm  text-level-semantics.htm
docs/style/components/: icon.htm  nav-tree.htm  site-footer.htm  site-header.htm
docs/style/components/document/: default.htm  din-5008.htm
docs/template/: index.html  sandbox.html
scripts/: bitbucket-cloud-upload.ts  npm-pack.ts  pack.ts  publish.ts
src/: .gitignore-output
src/script/: README.md  global.d.ts  main.ts
src/script/_types/: global.d.ts
src/script/base/: root.ts
src/script/base/root/: disco-mode.ts  index.ts  preferred-color-scheme.ts
src/script/vendors/: index.ts
src/script/vendors/gifer.com/: gif.ts  index.ts
src/script/vendors/pixabay/: audio.ts  index.ts
src/scss/: global.scss
src/scss/base/: _accessibility.scss
src/scss/components/: _button-style-ghost.scss  _button.scss
src/scss/features/: _pagination.scss
src/scss/layout/: _general.scss  _site-header.scss
src/scss/navigation/: _navigation.scss
src/scss/variables/: _typography.scss
src/scss/views/: _404.scss  _comments.scss  _search.scss
src/style/: CONTRIBUTING.md  demo.scss  index.scss  kitchen-sink.scss  main.scss
src/style/abstracts/: _mixins.scss  _variables.scss
src/style/abstracts/animations/: _tada.scss
src/style/abstracts/mixins/: _animations.scss  _font.scss  _gradient.scss
src/style/abstracts/variables/: _colors.scss  _layout.scss  _spacings.scss  _typography.scss
src/style/base/: _animations.scss  _grouping-content.scss  _root.scss  _sections.scss  _text-level-semantics.scss  _typography.scss
src/style/components/: _components.scss  _global-options.scss  _icon.scss  _link.scss  _nav-tree.scss  _site-footer.scss  _site-header.scss
src/style/layout/: _document.scss  _forms.scss  _nav-tree.scss  _site-footer.scss  _site-header.scss  _site-sidebar.scss  _top-footer.scss  _top-sidebar.scss
src/style/navigation/: _nav-desktop.scss  _nav-mobile.scss
src/style/themes/: _theme.scss
src/style/themes/tiara/: index.scss
src/style/variables/: _layout.scss  _spacings.scss
src/style/vendors/: README.md
src/style/vendors/Boxicons/: _font.scss  _main.scss  _variables.scss
src/style/vendors/Inter/: _main.scss  _variables.scss
src/style/vendors/JetBrainsMono/: _main.scss  _variables.scss
src/style/vendors/MonaSans/: _main.scss  _variables.scss
src/style/vendors/animate.scss/: _main.scss
src/style/views/: _single.scss
src/ts/: front-end.ts
src/ts/modules/: a11y-focus-search-field.ts  a11y-skip-link.ts  accessibility.ts  anchors.ts  external-link.ts  localization.ts  navigation.ts  top.ts
src/ts/modules/navigation/: a11y-add-dropdown-toggle-labels-click.ts  a11y-add-dropdown-toggle-labels.ts  a11y-focus-trap.ts  add-multiple-event-listeners.ts  calculate-burger-menu-position.ts  calculate-dropdown-toggle-height.ts  check-for-submenu-overflow.ts  close-sub-menu-handler.ts  close-sub-menu.ts  dropdown-menu-on-hover.ts  is-out-of-viewport.ts
src/ts/types/: reframe.d.ts
tests/base/root/: PreferredColorScheme.test.ts
tests/script/: README-md
tests/script/base/root/: PreferredColorScheme.test.ts
